--- a/landing-page.html
+++ b/landing-page.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="landing-page.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
     <title>Landing Page</title>
 </head>
 <body>
@@ -24,6 +26,27 @@
             </div>
             <div class="image-placeholder">
                 <p>this is a placeholder for an image</p>
+            </div>
+        </div>
+        <div class="info-section">
+            <h3>Some random information</h3>
+            <div class="info-container">
+                <div class="info-item">
+                    <div class="image-box"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="info-item">
+                    <div class="image-box"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="info-item">
+                    <div class="image-box"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="info-item">
+                    <div class="image-box"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
             </div>
         </div>
     </div>
