--- a/landing-page.html
+++ b/landing-page.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="landing-page.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,300;1,400&display=swap" rel="stylesheet">
+
 
     <title>Landing Page</title>
 </head>
@@ -50,6 +51,12 @@
                 </div>
             </div>
         </div>
+        <div class="quote-section">
+            <p id="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <p id="quote-author">-Thor, God of Thunder</p>
+
+        </div>
+
     </div>
 </body>
 </html>
