--- a/landing-page.html
+++ b/landing-page.html
@@ -54,9 +54,19 @@
         <div class="quote-section">
             <p id="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
             <p id="quote-author">-Thor, God of Thunder</p>
-
         </div>
-
+        <!-- -------------------------------------------------------------------------- -->
+        <div class="cta-section">
+            <div class="cta-text">
+                <h2>Call to action! It's time!</h2>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+                <button><Strong>Sign up</Strong></button>
+        </div>
+        <!-- -------------------------------------------------------------------------- -->
+         <footer class="footer">
+            <p>Copyright © The Odin Project 2021</p>
+         </footer>
     </div>
 </body>
 </html>
